# ME3227_DTGC

./: CMakeLists.txt
.claude/: settings.local.json
include/: gcode_gen.h  geometry.h  image_processing.h  json_writer.h  llm_api_ollama.h  ocr.h
parser/: output_from_llm.nc  parsed_output_from_llm.nc  parser  parser.cpp
src/: gcode_gen.cpp  geometry.cpp  image_processing.cpp  json_writer.cpp  llm_api_ollama.cpp  main.cpp  ocr.cpp
templates/: gcode_templates.json
